--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,1 +1,131 @@
-<p>form works!</p>
+<section class="form-wrapper">
+  <button type="button" (click)="addJob()" class="add-job-btn" mat-flat-button>
+    Add job
+  </button>
+  <form (ngSubmit)="onSubmit()" [formGroup]="jobForm" class="form-data-wrapper">
+    <ng-container formArrayName="jobs">
+      @for(job of jobs.controls;let i = $index; track job){
+      <div class="job-form-wrapper" [formGroup]="job">
+        <button
+          type="button"
+          (click)="removeJob(i)"
+          class="remove-job-btn"
+          mat-flat-button
+        >
+          Remove job
+        </button>
+        <app-custom-input
+          [label]="'Company name'"
+          [parentGroup]="job"
+          [controlName]="'name'"
+          formControlName="name"
+        ></app-custom-input>
+        <app-custom-input
+          [label]="'Company web-page'"
+          [parentGroup]="job"
+          [controlName]="'webPage'"
+          formControlName="webPage"
+        ></app-custom-input>
+        <app-custom-input
+          [label]="'Company description'"
+          [parentGroup]="job"
+          [controlName]="'description'"
+          formControlName="description"
+        ></app-custom-input>
+        <button
+          type="button"
+          (click)="addPosition(job)"
+          class="add-position-btn"
+          mat-flat-button
+        >
+          Add position
+        </button>
+        @if(getPositions(job).controls.length){
+        <ng-container formArrayName="positions">
+          @for(position of getPositions(job).controls; track position; let j =
+          $index){
+          <div class="positions-form-wrapper" [formGroup]="position">
+            <button
+              type="button"
+              (click)="removePosition(job, j)"
+              class="remove-position-btn"
+              mat-flat-button
+            >
+              Remove position
+            </button>
+            <app-custom-input
+              [label]="'Position name'"
+              [parentGroup]="position"
+              [controlName]="'positionName'"
+              formControlName="positionName"
+            ></app-custom-input>
+            <app-custom-input
+              [label]="'Position level'"
+              [parentGroup]="position"
+              [controlName]="'positionLevel'"
+              formControlName="positionLevel"
+            ></app-custom-input>
+            <app-custom-input
+              [label]="'Position description'"
+              [parentGroup]="position"
+              [controlName]="'positionDescription'"
+              formControlName="positionDescription"
+            ></app-custom-input>
+            <div class="position-dates-wrapper">
+              <div class="position-date-item">
+                <mat-form-field>
+                  <mat-label>Choose a date</mat-label>
+                  <input
+                    [readonly]="true"
+                    formControlName="positionDateFrom"
+                    matInput
+                    [matDatepicker]="pickerFrom"
+                    [placeholder]="'MM/DD/YYYY'"
+                  />
+                  @if (position.get('positionDateFrom')?.hasError('required')) {
+                  <mat-error
+                    >Position description is
+                    <strong>required</strong></mat-error
+                  >
+                  }
+                  <mat-datepicker-toggle
+                    matIconSuffix
+                    [for]="pickerFrom"
+                  ></mat-datepicker-toggle>
+                  <mat-datepicker #pickerFrom></mat-datepicker>
+                </mat-form-field>
+              </div>
+              <div class="position-date-item">
+                <mat-form-field>
+                  <mat-label>Choose a date</mat-label>
+                  <input
+                    [readonly]="true"
+                    formControlName="positionDateTo"
+                    matInput
+                    [matDatepicker]="pickerTo"
+                    [placeholder]="'MM/DD/YYYY'"
+                  />
+                  @if (position.get('positionDateTo')?.hasError('required')) {
+                  <mat-error
+                    >Position description is
+                    <strong>required</strong></mat-error
+                  >
+                  }
+                  <mat-datepicker-toggle
+                    matIconSuffix
+                    [for]="pickerTo"
+                  ></mat-datepicker-toggle>
+                  <mat-datepicker #pickerTo></mat-datepicker>
+                </mat-form-field>
+              </div>
+            </div>
+          </div>
+          }
+        </ng-container>
+        }
+      </div>
+      }
+      <button class="submit-btn" type="submit" mat-flat-button>Submit</button>
+    </ng-container>
+  </form>
+</section>
