add if expression on submit button

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -124,8 +124,9 @@
         </ng-container>
         }
       </div>
-      }
+      } @if(jobs.controls.length){
       <button class="submit-btn" type="submit" mat-flat-button>Submit</button>
+      }
     </ng-container>
   </form>
 </section>
